AcrobatActionResolver implemented